Docs: add swagger docs
