# docs/swagger.yaml
@@ -66,6 +66,18 @@ definitions:
       username:
         type: string
     type: object
+  admin.broadcastRequest:
+    properties:
+      msg:
+        type: string
+      provider:
+        $ref: '#/definitions/models.IdProvider'
+    type: object
+  admin.broadcastResponse:
+    properties:
+      response:
+        type: string
+    type: object
   auth.ErrorResponse:
     properties:
       error:
@@ -118,16 +130,22 @@ definitions:
       name:
         type: string
     type: object
+  models.IdProvider:
+    enum:
+    - telegram
+    - bale
+    type: string
+    x-enum-varnames:
+    - TELEGRAM
+    - BALE
   models.User:
     properties:
-      auto_save:
-        type: boolean
       id:
         type: integer
       role:
         $ref: '#/definitions/models.UserRole'
-      token:
-        type: string
+      samad_connection:
+        type: boolean
       username:
         type: string
     type: object
@@ -162,13 +180,13 @@ definitions:
     format: int32
     type: integer
     x-enum-varnames:
+    - Saturday
     - Sunday
     - Monday
     - Tuesday
     - Wednesday
     - Thursday
     - Friday
-    - Saturday
   services.DayResult:
     properties:
       day:
@@ -262,6 +280,38 @@ info:
   termsOfService: http://swagger.io/terms/
   title: FoodPilot
 paths:
+  /api/admin/broadcast:
+    post:
+      consumes:
+      - application/json
+      description: Send a broadcast message to all users of a specific provider
+      parameters:
+      - description: Broadcast message details
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/admin.broadcastRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/admin.broadcastResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/admin.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/admin.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Broadcast message to users
+      tags:
+      - Admin
   /api/admin/food:
     get:
       description: Return all the foods
